maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:29: error: Boolean does not take parameters
(getDirection()==g && estFaceMur==false){return 4}
                                        ^